--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">AndroidBaseProjectKotlin</string>
     <string name="default_loading_message">Loading, Please wait . . .</string>
+    <string name="ok">OK</string>
 </resources>
